--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Convert Obsidian links to HTTPS links for sharing in Google Tasks, GitHub, Slack, and more">
+    <meta name="description" content="Convert Obsidian links to HTTPS links for sharing in Google Tasks, GitHub, Slack, and more. Install the plugin for instant hotkey access.">
     <meta name="theme-color" content="#7c3aed">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -345,6 +345,10 @@
             <section class="info-section">
                 <h2>What is this?</h2>
                 <p>Many apps (Google Tasks, GitHub, Slack, etc.) only make <code>https://</code> links clickable. Obsidian uses <code>obsidian://</code> links, which get ignored. This tool converts your Obsidian links to HTTPS links that redirect back to Obsidian.</p>
+
+                <div style="background: rgba(124, 58, 237, 0.1); border-left: 3px solid var(--accent); padding: 0.75rem; margin: 1rem 0; font-size: 0.9rem;">
+                    <strong>Tip:</strong> Install the Obsidian plugin for instant hotkey access. This website is useful for manual conversion or if you don't have the plugin installed.
+                </div>
 
                 <div class="info-grid" style="margin-top: 1rem;">
                     <div class="info-box">
