--- a/index.html
+++ b/index.html
@@ -362,10 +362,11 @@
 
                             <p style="margin-bottom: 0.75rem;"><strong>Without plugin:</strong></p>
                             <ol style="margin-left: 1.25rem;">
-                                <li>In Obsidian: Click three dots (top right) → "Copy Obsidian URL"
+                                <li>In Obsidian: Click three dots (top right) → "Copy Obsidian URL" or "Copy Advanced URI" (either works)
                                     <div style="margin-top: 0.5rem; text-align: center;">
                                         <img src="./obsidian-menu.png" alt="Obsidian menu showing Copy Obsidian URL option" style="max-width: 200px; border: 1px solid var(--border); border-radius: 4px;">
                                     </div>
+                                    <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: 0.5rem;"><em>Note: Advanced URI offers extra automation features (appending content, running commands), but for just opening notes, both work the same.</em></p>
                                 </li>
                                 <li style="margin-top: 0.5rem;">Paste link below in "Convert Link" section</li>
                                 <li>Copy the HTTPS version and share it</li>
