Update tagline to clarify links are private and local

--- a/404.html
+++ b/404.html
@@ -324,7 +324,9 @@
     <div class="container">
         <header>
             <h1>Obsidian <span>Link Redirector</span></h1>
-            <p class="tagline">Make Obsidian links clickable anywhere</p>
+            <div style="background: rgba(124, 58, 237, 0.15); border: 1px solid var(--accent); border-radius: 8px; padding: 1rem; margin-top: 1rem;">
+                <p style="font-size: 1.1rem; text-align: center; margin: 0;">Make your Obsidian notes clickable in any app. Links are private and local to you.</p>
+            </div>
         </header>
 
         <!-- Redirect Banner (shown when redirecting) -->
