Fix GitHub username in links (mitre → lockmeister)

--- a/404.html
+++ b/404.html
@@ -394,7 +394,7 @@
                         <div class="collapsible-content collapsed">
                             <p style="margin-bottom: 0.75rem;">Skip the manual conversion by installing the plugin:</p>
                             <ol style="margin-left: 1.25rem;">
-                                <li>Download the plugin files from <a href="https://github.com/mitre/obsidianlinks/tree/master/obsidian-plugin/copy-redirect-link" target="_blank">GitHub</a></li>
+                                <li>Download the plugin files from <a href="https://github.com/lockmeister/obsidianlinks/tree/master/obsidian-plugin" target="_blank">GitHub</a></li>
                                 <li>Copy the folder to your vault's <code>.obsidian/plugins/</code> directory</li>
                                 <li>Restart Obsidian and enable the plugin in Settings → Community plugins</li>
                                 <li>Set a hotkey in Settings → Hotkeys → "Copy HTTPS redirect link"</li>
@@ -480,7 +480,7 @@
             <footer>
                 Works with <a href="https://obsidian.md" target="_blank">Obsidian</a> and the <a href="https://github.com/Vinzent03/obsidian-advanced-uri" target="_blank">Advanced URI plugin</a>
                 <br>
-                <a href="https://github.com/mitre/obsidianlinks" target="_blank">View source on GitHub</a>
+                <a href="https://github.com/lockmeister/obsidianlinks" target="_blank">View source on GitHub</a>
             </footer>
         </div>
     </div>
